--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.4.11",
     "firebase": "^10.1.0",
     "next": "13.4.13",
     "react": "18.2.0",
