--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "react-lottie-player": "^1.5.4"
+    "react-lottie-player": "^1.5.4",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
